# lyla

./: .gitignore  Makefile  README.md
backend/: Dockerfile  Procfile  docker-compose.yml  requirements.txt
backend/app/: bert_dataset.py  example_generator.py  example_generator_model.py  main.py  schema.py  score_regression.py  usecase.py
backend/web/: startup.sh
backend/web/app/: bert_dataset.py  example_generator_model.py  main.py  score_regression_model.py
frontend/: package-lock.json  package.json
frontend/src/: package-lock.json  package.json
frontend/src/components/: FeedbackCard.tsx  TextScores.tsx
frontend/src/components/Header/: index.tsx
frontend/src/components/common/: TwoColumnLayout.tsx
frontend/src/components/common/hooks/: useAxios.ts  useCustomSWR.ts
frontend/src/components/features/Editor/: index.tsx
frontend/src/components/templates/: EditorTemplate.tsx  FeedbackCard.tsx  Header.tsx  MyModal.tsx  TextScores.tsx  seed.ts
frontend/src/components/templates/utils/: index.ts
frontend/src/components/utils/: index.spec.ts  index.ts
frontend/src/pages/: _app.tsx  index.tsx
next-web/: package-lock.json  package.json
next-web/src/components/common/: OneColumnLayout.tsx
next-web/src/components/templates/: BotFeedbacks.tsx
next-web/src/components/templates/utils/: index.spec.ts
qgen/: Cargo.toml
qgen/src/: bing_api.rs  document_processor.rs  main.rs
src/: package-lock.json  package.json
src/components/common/: OneColumnLayout.tsx  TwoColumnLayout.tsx
src/components/templates/: EditorTemplate.tsx
