[package]
name = "qgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lindera  = { version = "0.14.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.138"
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["full"] }
